fix: toggle button out of bound on DataTable in FireFox

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 html, body, #main-container {
   height: 100%;
 }
+
+/*This will work for firefox*/
+@-moz-document url-prefix() {
+  .pf-c-button.pf-m-plain{
+      margin-right: var(--pf-global--spacer--md);
+  }
+}
